Bug 54134 - Asserting hit when resizing FF > 8k px [SNA, Gen6]
Summary: Asserting hit when resizing FF > 8k px [SNA, Gen6]
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Chris Wilson
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-08-27 21:29 UTC by Clemens Eisserer
Modified: 2012-09-04 08:12 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Clemens Eisserer 2012-08-27 21:29:33 UTC
When resizing a FF-Window with gmail loaded to >8k px, I hit the following assertion on my Gen6 based Notebook:

0x00000034f2635925 in __GI_raise (sig=sig@entry=6) at ../nptl/sysdeps/unix/sysv/linux/raise.c:64
64	  return INLINE_SYSCALL (tgkill, 3, pid, selftid, sig);
(gdb) bt
#0  0x00000034f2635925 in __GI_raise (sig=sig@entry=6) at ../nptl/sysdeps/unix/sysv/linux/raise.c:64
#1  0x00000034f26370d8 in __GI_abort () at abort.c:91
#2  0x00000034f262e6a2 in __assert_fail_base (fmt=0x34f2778188 "%s%s%s:%u: %s%sAssertion `%s' failed.\n%n", 
    assertion=assertion@entry=0x7fbbf38604d8 "!too_large(op->dst.width, op->dst.height)", 
    file=file@entry=0x7fbbf38603f5 "gen6_render.c", line=line@entry=684, 
    function=function@entry=0x7fbbf3862090 "gen6_emit_drawing_rectangle") at assert.c:94
#3  0x00000034f262e752 in __GI___assert_fail (assertion=0x7fbbf38604d8 "!too_large(op->dst.width, op->dst.height)", 
    file=0x7fbbf38603f5 "gen6_render.c", line=684, function=0x7fbbf3862090 "gen6_emit_drawing_rectangle")
    at assert.c:103
#4  0x00007fbbf37ea301 in gen6_emit_drawing_rectangle (sna=0x7fbbf3459010, op=0x7fff69015730) at gen6_render.c:684
#5  0x00007fbbf37ea990 in gen6_emit_state (sna=0x7fbbf3459010, op=0x7fff69015730, wm_binding_table=65520)
    at gen6_render.c:901
#6  0x00007fbbf37f39b6 in gen6_emit_fill_state (sna=0x7fbbf3459010, op=0x7fff69015730) at gen6_render.c:3635
#7  0x00007fbbf37f3f6e in gen6_render_fill_boxes (sna=0x7fbbf3459010, op=3 '\003', format=537004168, color=0x12b57e8, 
    dst=0x12a4ed0, dst_bo=0x1281740, box=0x7fff69015940, n=1) at gen6_render.c:3740
#8  0x00007fbbf37737f3 in sna_composite_rectangles (op=3 '\003', dst=0x127b160, color=0x12b57e8, num_rects=1, 
    rects=0x12b57f0) at sna_composite.c:861
#9  0x00000000004fb135 in ?? ()
#10 0x000000000043444a in ?? ()
#11 0x0000000000423485 in ?? ()
#12 0x00000034f2621735 in __libc_start_main (main=0x423110, argc=8, ubp_av=0x7fff69015bc8, init=<optimized out>, 
    fini=<optimized out>, rtld_fini=<optimized out>, stack_end=0x7fff69015bb8) at libc-start.c:226
#13 0x000000000042375d in _start ()
Comment 1 Clemens Eisserer 2012-08-27 21:30:57 UTC
please find the debug=full log at: http://93.83.133.214/Xorg.25.log.7za
Comment 2 Chris Wilson 2012-08-27 21:33:17 UTC
Keep it quiet! No one had noticed that for over a year! Pesky users ;-)
Comment 3 Chris Wilson 2012-09-04 08:12:01 UTC
This should get past the immediate issue, and lets hope I have everything else correctly detecting when to redirect.

commit a972affe0c78b23a119d5dd14bb4446c89122af1
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Sun Sep 2 17:43:33 2012 +0100

    sna/gen6+: Redirect fills if the destination is too large for 3D
    
    Reported-by: Clemens Eisserer <linuxhippy@gmail.com>
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=54134
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.